# heavy-metal-playlist

./: .browserslistrc  .gitignore  README.md  angular.json  capacitor.config.ts  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json
.claude/: settings.json  settings.local.json
.github/workflows/: build-android.yml  build-mac.yml  deploy-frontend.yml
android/app/: build.gradle
electron/: database.ts  main.ts  preload.ts  spotify.ts
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bpm.rs  equipment.rs  gigs.rs  library.rs  mod.rs  playlists.rs  rider.rs  settings.rs  songs.rs
src-tauri/src/database/: mod.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
src/app/core/: nav-theme.ts
src/app/core/interceptors/: auth.interceptor.ts
src/app/core/models/: auth.model.ts  equipment.model.ts  finance.model.ts  gig.model.ts  merch.model.ts  mixer.model.ts  poll.model.ts  rehearsal.model.ts  song.model.ts
src/app/core/services/: auth.service.ts  bpm.service.ts  connectivity.service.ts  database.service.ts  music-api.service.ts  stage-plot.service.ts  task.service.ts  toast.service.ts  tpv-session.service.ts
src/app/features/band-settings/: band-settings.component.ts
src/app/features/conciertos/: conciertos.component.ts
src/app/features/ensayos/: ensayos.component.html  ensayos.component.scss  ensayos.component.ts
src/app/features/mixer/: scn-parser.ts  (+4 more)
src/environments/: environment.android.ts
(+73 files in other folders)
